// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`About static pages > renders greeting page hero and sections 1`] = `
<DocumentFragment>
  <div
    class="about-page"
  >
    <section
      aria-labelledby="about-hero-heading"
      class="about-hero"
    >
      <div
        class="about-hero__text"
      >
        <p
          class="about-hero__eyebrow"
        >
          총원우회 소개
        </p>
        <h1
          class="about-hero__title"
          id="about-hero-heading"
        >
          회장 인사말
        </h1>
        <p
          class="about-hero__description"
        >
          총원우회 16대 회장 김서강입니다. 서로 다른 경험을 가진 동문이 마음껏 도전하고 성장할 수 있도록, 든든한 동반자가 되겠습니다.
        </p>
      </div>
      <div
        class="about-hero__image"
      >
        <img
          alt="총원우회 서강대 캠퍼스 풍경 삽화"
          class="h-full w-full rounded-xl object-cover shadow-md"
          height="480"
          src="/images/about/greeting-hero.svg"
          width="640"
        />
      </div>
    </section>
    <section
      aria-labelledby="greeting-vision-title"
      class="about-section"
    >
      <div
        class="about-section__content"
      >
        <h2
          class="about-section__heading"
          id="greeting-vision-title"
        >
          동문이 함께 만드는 미래
        </h2>
        <p>
          총원우회는 지난 30여 년 동안 끊임없는 교류와 협력으로 성장해 왔습니다. 올해는 디지털 전환과 온·오프라인 행사를 통해 전국의 동문이 언제든지 연결될 수 있는 기반을 마련하는 데 집중하고자 합니다.
        </p>
        <p>
          동문 여러분 한 분, 한 분이 주인공입니다. 총원우회 활동을 통해 쌓인 경험과 지식을 나누어 각자의 커리어와 삶이 더 단단해질 수 있도록 함께하겠습니다.
        </p>
      </div>
      <figure
        aria-label="총원우회 비전 다이어그램"
        class="about-section__figure"
      >
        <img
          alt="총원우회의 비전을 상징하는 원형 다이어그램"
          class="h-auto w-full rounded-lg object-cover shadow-sm"
          height="360"
          src="/images/about/greeting-detail.svg"
          width="520"
        />
      </figure>
    </section>
    <section
      aria-labelledby="greeting-commitments-title"
      class="about-section about-section--stacked"
    >
      <div
        class="about-section__content"
      >
        <h2
          class="about-section__heading"
          id="greeting-commitments-title"
        >
          약속드리는 세 가지 방향
        </h2>
        <p>
          총원우회가 추구하는 핵심 가치를 세 가지로 정리했습니다. 모든 사업과 모임은 이 가치 위에서 기획하고, 결과를 투명하게 공유하겠습니다.
        </p>
      </div>
      <ul
        aria-label="총원우회 운영 원칙 목록"
        class="about-section__list"
      >
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            연결과 협력
          </h3>
          <p>
            세대와 기수를 넘나드는 연결을 촉진하고, 선후배가 함께 배우는 교류의 장을 만드는 것이 최우선입니다.
          </p>
        </li>
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            지속 가능한 성장
          </h3>
          <p>
            총원우회의 재정·인적 자원을 투명하게 관리하고, 구성원의 성장을 지원하는 프로그램을 꾸준히 확장하겠습니다.
          </p>
        </li>
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            사회적 책임
          </h3>
          <p>
            지역사회와 학교 발전에 기여하고, 동문 지식의 선순환을 위해 사회공헌 프로젝트를 준비하고 있습니다.
          </p>
        </li>
      </ul>
    </section>
  </div>
</DocumentFragment>
`;

exports[`About static pages > renders history page timeline and archive 1`] = `
<DocumentFragment>
  <div
    class="about-page"
  >
    <section
      aria-labelledby="about-hero-heading"
      class="about-hero"
    >
      <div
        class="about-hero__text"
      >
        <p
          class="about-hero__eyebrow"
        >
          총원우회 소개
        </p>
        <h1
          class="about-hero__title"
          id="about-hero-heading"
        >
          역대 회장단과 연혁
        </h1>
        <p
          class="about-hero__description"
        >
          총원우회는 1994년 창립 이후 30년 동안 동문 교류와 사회 공헌을 이어왔습니다. 연혁과 역대 회장단의 주요 활동을 한눈에 정리했습니다.
        </p>
      </div>
      <div
        class="about-hero__image"
      >
        <img
          alt="총원우회 연혁을 상징하는 타임라인 삽화"
          class="h-full w-full rounded-xl object-cover shadow-md"
          height="480"
          src="/images/about/history-hero.svg"
          width="640"
        />
      </div>
    </section>
    <section
      aria-labelledby="history-timeline"
      class="about-section about-section--timeline"
    >
      <div
        class="about-section__content"
      >
        <h2
          class="about-section__heading"
          id="history-timeline"
        >
          주요 연혁
        </h2>
        <p>
          동문회의 발자취를 간략히 정리했습니다. 더 자세한 기록은 연간 사업 보고서와 자료실을 통해 열람할 수 있습니다.
        </p>
      </div>
      <ol
        aria-label="총원우회 주요 연혁"
        class="about-timeline"
      >
        <li
          class="about-timeline__item"
        >
          <div
            aria-hidden="true"
            class="about-timeline__marker"
          />
          <div
            class="about-timeline__content"
          >
            <span
              class="about-timeline__year"
            >
              1994
            </span>
            <h3
              class="about-timeline__title"
            >
              총원우회 창립
            </h3>
            <p>
              초기 4개 기수가 연합하여 총원우회를 창립하고, 서강대학교 경제대학원 동문 네트워크의 초석을 다졌습니다.
            </p>
          </div>
        </li>
        <li
          class="about-timeline__item"
        >
          <div
            aria-hidden="true"
            class="about-timeline__marker"
          />
          <div
            class="about-timeline__content"
          >
            <span
              class="about-timeline__year"
            >
              2005
            </span>
            <h3
              class="about-timeline__title"
            >
              장학기금 조성
            </h3>
            <p>
              동문 기부로 장학기금을 조성해 재학 중인 후배를 지원하기 시작했습니다. 현재는 연 10명 내외에게 장학금을 지급합니다.
            </p>
          </div>
        </li>
        <li
          class="about-timeline__item"
        >
          <div
            aria-hidden="true"
            class="about-timeline__marker"
          />
          <div
            class="about-timeline__content"
          >
            <span
              class="about-timeline__year"
            >
              2016
            </span>
            <h3
              class="about-timeline__title"
            >
              디지털 커뮤니티 전환
            </h3>
            <p>
              회원 포털과 모바일 알림 시스템을 구축하여 행사 신청, 회비 납부, 커뮤니티 운영을 온라인으로 전환했습니다.
            </p>
          </div>
        </li>
        <li
          class="about-timeline__item"
        >
          <div
            aria-hidden="true"
            class="about-timeline__marker"
          />
          <div
            class="about-timeline__content"
          >
            <span
              class="about-timeline__year"
            >
              2024
            </span>
            <h3
              class="about-timeline__title"
            >
              ESG 프로젝트 론칭
            </h3>
            <p>
              지역사회 연계 사회공헌 활동을 본격화하고, ESG 위원회를 신설했습니다.
            </p>
          </div>
        </li>
      </ol>
    </section>
    <section
      aria-labelledby="history-presidents"
      class="about-section about-section--stacked"
    >
      <div
        class="about-section__content"
      >
        <h2
          class="about-section__heading"
          id="history-presidents"
        >
          역대 회장단
        </h2>
        <p>
          지난 6년간 총원우회를 이끌어 주신 회장단입니다. 각 회장단의 주요 사업과 과제를 간략히 소개합니다.
        </p>
      </div>
      <ul
        aria-label="역대 회장단 소개"
        class="about-section__list"
      >
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            13대 회장 박지원
          </h3>
          <dl
            class="about-section__dl"
          >
            <div>
              <dt>
                활동 기간
              </dt>
              <dd>
                2018 - 2019
              </dd>
            </div>
            <div>
              <dt>
                주요 과제
              </dt>
              <dd>
                디지털 전환, 회원 데이터베이스 정비
              </dd>
            </div>
          </dl>
        </li>
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            14대 회장 이상훈
          </h3>
          <dl
            class="about-section__dl"
          >
            <div>
              <dt>
                활동 기간
              </dt>
              <dd>
                2020 - 2021
              </dd>
            </div>
            <div>
              <dt>
                주요 과제
              </dt>
              <dd>
                코로나 대응 온라인 프로그램 확대
              </dd>
            </div>
          </dl>
        </li>
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            15대 회장 정아름
          </h3>
          <dl
            class="about-section__dl"
          >
            <div>
              <dt>
                활동 기간
              </dt>
              <dd>
                2022 - 2023
              </dd>
            </div>
            <div>
              <dt>
                주요 과제
              </dt>
              <dd>
                장학 사업 확장, ESG 프로젝트 준비
              </dd>
            </div>
          </dl>
        </li>
      </ul>
    </section>
    <section
      aria-labelledby="history-archive"
      class="about-section"
    >
      <div
        class="about-section__content"
      >
        <h2
          class="about-section__heading"
          id="history-archive"
        >
          자료실 미리보기
        </h2>
        <p>
          연간 사업 보고서, 회계 감사 보고, 총회 의사록 등은 로그인한 회원에게 순차적으로 열람 권한을 제공할 예정입니다. 정식 오픈 전까지는 주요 항목만 요약으로 제공합니다.
        </p>
        <p>
          의견이나 추가 요청이 있다면 사무국으로 알려 주세요. 자료 공개 범위와 형식을 함께 논의하겠습니다.
        </p>
      </div>
      <figure
        aria-label="자료 보관소 이미지"
        class="about-section__figure"
      >
        <img
          alt="자료실 서가를 묘사한 일러스트"
          class="h-auto w-full rounded-lg object-cover shadow-sm"
          height="360"
          src="/images/about/history-archive.svg"
          width="520"
        />
      </figure>
    </section>
  </div>
</DocumentFragment>
`;

exports[`About static pages > renders organization page with contact list 1`] = `
<DocumentFragment>
  <div
    class="about-page"
  >
    <section
      aria-labelledby="about-hero-heading"
      class="about-hero"
    >
      <div
        class="about-hero__text"
      >
        <p
          class="about-hero__eyebrow"
        >
          총원우회 소개
        </p>
        <h1
          class="about-hero__title"
          id="about-hero-heading"
        >
          조직도
        </h1>
        <p
          class="about-hero__description"
        >
          총원우회는 회장단과 집행부, 자문위원, 감사단이 분담하여 운영합니다. 각 조직은 분기별 운영 성과를 보고하고, 모든 문서는 회원에게 투명하게 공개합니다.
        </p>
      </div>
      <div
        class="about-hero__image"
      >
        <img
          alt="총원우회 조직 구성을 보여주는 삽화"
          class="h-full w-full rounded-xl object-cover shadow-md"
          height="480"
          src="/images/about/org-hero.svg"
          width="640"
        />
      </div>
    </section>
    <section
      aria-labelledby="org-structure"
      class="about-section"
    >
      <div
        class="about-section__content"
      >
        <h2
          class="about-section__heading"
          id="org-structure"
        >
          회장단과 집행부
        </h2>
        <p>
          회장단은 회장, 수석부회장, 부회장단, 감사단으로 구성됩니다. 회장단은 전략 방향과 연간 사업계획을 수립하고, 집행부는 이를 실행하며 회원과의 접점을 관리합니다.
        </p>
        <p>
          각 분과는 최소 2인 이상으로 구성되어 상호 견제와 협업 체계를 유지합니다. 주요 안건은 월 1회 열리는 운영위원회에서 논의 후 공지합니다.
        </p>
      </div>
      <figure
        aria-label="총원우회 조직 계층 구조"
        class="about-section__figure"
      >
        <img
          alt="회장단, 집행부, 자문위원으로 구성된 조직도"
          class="h-auto w-full rounded-lg object-cover shadow-sm"
          height="360"
          src="/images/about/org-chart.svg"
          width="520"
        />
      </figure>
    </section>
    <section
      aria-labelledby="org-committees"
      class="about-section about-section--stacked"
    >
      <div
        class="about-section__content"
      >
        <h2
          class="about-section__heading"
          id="org-committees"
        >
          분과별 주요 역할
        </h2>
        <p>
          모든 분과는 연초에 정량 목표와 예산 사용 계획을 공지하며, 분기별로 성과와 지출 내역을 보고합니다. 문서는 회원 전용 게시판에서 열람할 수 있습니다.
        </p>
      </div>
      <ul
        aria-label="분과 역할 목록"
        class="about-section__list"
      >
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            집행위원회
          </h3>
          <p>
            정기 모임 기획, 예산 집행, 대외 협력 등 총원우회의 일상 운영을 관리합니다. 분기별 운영 리포트를 공개합니다.
          </p>
        </li>
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            기획분과
          </h3>
          <p>
            신규 프로그램과 동문 대상 강연, 산업별 소모임을 기획합니다. 올해는 금융·테크·문화 영역을 우선으로 진행합니다.
          </p>
        </li>
        <li
          class="about-section__card"
        >
          <h3
            class="about-section__card-title"
          >
            회원분과
          </h3>
          <p>
            회원 데이터베이스 정비, 입회/재등록 지원, 회원복지 프로그램을 운영합니다. 개인정보 보호와 접근성 정책을 준수합니다.
          </p>
        </li>
      </ul>
    </section>
    <section
      aria-labelledby="org-contact"
      class="about-section about-section--highlight"
    >
      <div
        class="about-section__content"
      >
        <h2
          class="about-section__heading"
          id="org-contact"
        >
          연락 및 협업 채널
        </h2>
        <p>
          공식 창구를 통해 모든 문의를 받고 있습니다. 회비 관련 문의, 협업 제안, 행사 대관 등은 사무국에서 담당자를 지정하여 응대합니다.
        </p>
      </div>
      <dl
        aria-label="사무국 연락처 정보"
        class="about-contact-list"
      >
        <div
          class="about-contact-list__item"
        >
          <dt
            class="about-contact-list__term"
          >
            사무국 대표 메일
          </dt>
          <dd
            class="about-contact-list__description"
          >
            office@sogang-econ-alumni.kr
          </dd>
        </div>
        <div
          class="about-contact-list__item"
        >
          <dt
            class="about-contact-list__term"
          >
            운영시간
          </dt>
          <dd
            class="about-contact-list__description"
          >
            평일 10:00 - 17:00 (점심 12:00 - 13:00)
          </dd>
        </div>
        <div
          class="about-contact-list__item"
        >
          <dt
            class="about-contact-list__term"
          >
            주소
          </dt>
          <dd
            class="about-contact-list__description"
          >
            서울 마포구 백범로 35, 서강대학교 경제대학원 3층 총원우회 사무국
          </dd>
        </div>
      </dl>
    </section>
  </div>
</DocumentFragment>
`;
